TEST_PROGRAMS/INVALID/david_zhou/invalid1.min
# missing then

if 0
  print 5;
else
  print 6;
endif
